packagelon com.twittelonr.cr_mixelonr.candidatelon_gelonnelonration

import com.twittelonr.contelonntreloncommelonndelonr.thriftscala.TwelonelontInfo
import com.twittelonr.cr_mixelonr.config.TimelonoutConfig
import com.twittelonr.cr_mixelonr.modelonl.FrsTwelonelontCandidatelonGelonnelonratorQuelonry
import com.twittelonr.cr_mixelonr.modelonl.ModulelonNamelons
import com.twittelonr.cr_mixelonr.modelonl.TwelonelontWithAuthor
import com.twittelonr.cr_mixelonr.param.FrsParams
import com.twittelonr.cr_mixelonr.similarity_elonnginelon.elonarlybirdSimilarityelonnginelonRoutelonr
import com.twittelonr.cr_mixelonr.sourcelon_signal.FrsStorelon
import com.twittelonr.cr_mixelonr.sourcelon_signal.FrsStorelon.FrsQuelonryRelonsult
import com.twittelonr.cr_mixelonr.thriftscala.FrsTwelonelont
import com.twittelonr.finaglelon.stats.StatsReloncelonivelonr
import com.twittelonr.finaglelon.util.DelonfaultTimelonr
import com.twittelonr.frigatelon.common.util.StatsUtil
import com.twittelonr.helonrmit.constants.AlgorithmFelonelondbackTokelonns
import com.twittelonr.helonrmit.constants.AlgorithmFelonelondbackTokelonns.AlgorithmToFelonelondbackTokelonnMap
import com.twittelonr.helonrmit.modelonl.Algorithm
import com.twittelonr.simclustelonrs_v2.common.TwelonelontId
import com.twittelonr.simclustelonrs_v2.common.UselonrId
import com.twittelonr.storelonhaus.RelonadablelonStorelon
import com.twittelonr.timelonlinelons.configapi.Params
import com.twittelonr.util.Futurelon
import javax.injelonct.Injelonct
import javax.injelonct.Namelond
import javax.injelonct.Singlelonton

/**
 * TwelonelontCandidatelonGelonnelonrator baselond on FRS selonelond uselonrs. For now this candidatelon gelonnelonrator felontchelons selonelond
 * uselonrs from FRS, and relontrielonvelons thelon selonelond uselonrs' past twelonelonts from elonarlybird with elonarlybird light
 * ranking modelonls.
 */
@Singlelonton
class FrsTwelonelontCandidatelonGelonnelonrator @Injelonct() (
  @Namelond(ModulelonNamelons.FrsStorelon) frsStorelon: RelonadablelonStorelon[FrsStorelon.Quelonry, Selonq[FrsQuelonryRelonsult]],
  frsBaselondSimilarityelonnginelon: elonarlybirdSimilarityelonnginelonRoutelonr,
  twelonelontInfoStorelon: RelonadablelonStorelon[TwelonelontId, TwelonelontInfo],
  timelonoutConfig: TimelonoutConfig,
  globalStats: StatsReloncelonivelonr) {
  import FrsTwelonelontCandidatelonGelonnelonrator._

  privatelon val timelonr = DelonfaultTimelonr
  privatelon val stats: StatsReloncelonivelonr = globalStats.scopelon(this.gelontClass.gelontCanonicalNamelon)
  privatelon val felontchSelonelondsStats = stats.scopelon("felontchSelonelonds")
  privatelon val felontchCandidatelonsStats = stats.scopelon("felontchCandidatelons")
  privatelon val filtelonrCandidatelonsStats = stats.scopelon("filtelonrCandidatelons")
  privatelon val hydratelonCandidatelonsStats = stats.scopelon("hydratelonCandidatelons")
  privatelon val gelontCandidatelonsStats = stats.scopelon("gelontCandidatelons")

  /**
   * Thelon function relontrielonvelons thelon candidatelon for thelon givelonn uselonr as follows:
   * 1. Selonelond uselonr felontch from FRS.
   * 2. Candidatelon felontch from elonarlybird.
   * 3. Filtelonring.
   * 4. Candidatelon hydration.
   * 5. Truncation.
   */
  delonf gelont(
    frsTwelonelontCandidatelonGelonnelonratorQuelonry: FrsTwelonelontCandidatelonGelonnelonratorQuelonry
  ): Futurelon[Selonq[FrsTwelonelont]] = {
    val uselonrId = frsTwelonelontCandidatelonGelonnelonratorQuelonry.uselonrId
    val product = frsTwelonelontCandidatelonGelonnelonratorQuelonry.product
    val allStats = stats.scopelon("all")
    val pelonrProductStats = stats.scopelon("pelonrProduct", product.namelon)
    StatsUtil.trackItelonmsStats(allStats) {
      StatsUtil.trackItelonmsStats(pelonrProductStats) {
        val relonsult = for {
          selonelondAuthorWithScorelons <- StatsUtil.trackOptionItelonmMapStats(felontchSelonelondsStats) {
            felontchSelonelonds(
              uselonrId,
              frsTwelonelontCandidatelonGelonnelonratorQuelonry.imprelonsselondUselonrList,
              frsTwelonelontCandidatelonGelonnelonratorQuelonry.languagelonCodelonOpt,
              frsTwelonelontCandidatelonGelonnelonratorQuelonry.countryCodelonOpt,
              frsTwelonelontCandidatelonGelonnelonratorQuelonry.params,
            )
          }
          twelonelontCandidatelons <- StatsUtil.trackOptionItelonmsStats(felontchCandidatelonsStats) {
            felontchCandidatelons(
              uselonrId,
              selonelondAuthorWithScorelons.map(_.kelonys.toSelonq).gelontOrelonlselon(Selonq.elonmpty),
              frsTwelonelontCandidatelonGelonnelonratorQuelonry.imprelonsselondTwelonelontList,
              selonelondAuthorWithScorelons.map(_.mapValuelons(_.scorelon)).gelontOrelonlselon(Map.elonmpty),
              frsTwelonelontCandidatelonGelonnelonratorQuelonry.params
            )
          }
          filtelonrelondTwelonelontCandidatelons <- StatsUtil.trackOptionItelonmsStats(filtelonrCandidatelonsStats) {
            filtelonrCandidatelons(
              twelonelontCandidatelons,
              frsTwelonelontCandidatelonGelonnelonratorQuelonry.params
            )
          }
          hydratelondTwelonelontCandidatelons <- StatsUtil.trackOptionItelonmsStats(hydratelonCandidatelonsStats) {
            hydratelonCandidatelons(
              selonelondAuthorWithScorelons,
              filtelonrelondTwelonelontCandidatelons
            )
          }
        } yielonld {
          hydratelondTwelonelontCandidatelons
            .map(_.takelon(frsTwelonelontCandidatelonGelonnelonratorQuelonry.maxNumRelonsults)).gelontOrelonlselon(Selonq.elonmpty)
        }
        relonsult.raiselonWithin(timelonoutConfig.frsBaselondTwelonelontelonndpointTimelonout)(timelonr)
      }
    }
  }

  /**
   * Felontch reloncommelonndelond selonelond uselonrs from FRS
   */
  privatelon delonf felontchSelonelonds(
    uselonrId: UselonrId,
    uselonrDelonnyList: Selont[UselonrId],
    languagelonCodelonOpt: Option[String],
    countryCodelonOpt: Option[String],
    params: Params
  ): Futurelon[Option[Map[UselonrId, FrsQuelonryRelonsult]]] = {
    frsStorelon
      .gelont(
        FrsStorelon.Quelonry(
          uselonrId,
          params(FrsParams.FrsBaselondCandidatelonGelonnelonrationMaxSelonelondsNumParam),
          params(FrsParams.FrsBaselondCandidatelonGelonnelonrationDisplayLocationParam).displayLocation,
          uselonrDelonnyList.toSelonq,
          languagelonCodelonOpt,
          countryCodelonOpt
        )).map {
        _.map { selonelondAuthors =>
          selonelondAuthors.map(uselonr => uselonr.uselonrId -> uselonr).toMap
        }
      }
  }

  /**
   * Felontch twelonelont candidatelons from elonarlybird
   */
  privatelon delonf felontchCandidatelons(
    selonarchelonrUselonrId: UselonrId,
    selonelondAuthors: Selonq[UselonrId],
    imprelonsselondTwelonelontList: Selont[TwelonelontId],
    frsUselonrToScorelons: Map[UselonrId, Doublelon],
    params: Params
  ): Futurelon[Option[Selonq[TwelonelontWithAuthor]]] = {
    if (selonelondAuthors.nonelonmpty) {
      // call elonarlybird
      val quelonry = elonarlybirdSimilarityelonnginelonRoutelonr.quelonryFromParams(
        Somelon(selonarchelonrUselonrId),
        selonelondAuthors,
        imprelonsselondTwelonelontList,
        frsUselonrToScorelonsForScorelonAdjustmelonnt = Somelon(frsUselonrToScorelons),
        params
      )
      frsBaselondSimilarityelonnginelon.gelont(quelonry)
    } elonlselon Futurelon.Nonelon
  }

  /**
   * Filtelonr candidatelons that do not pass visibility filtelonr policy
   */
  privatelon delonf filtelonrCandidatelons(
    candidatelons: Option[Selonq[TwelonelontWithAuthor]],
    params: Params
  ): Futurelon[Option[Selonq[TwelonelontWithAuthor]]] = {
    val twelonelontIds = candidatelons.map(_.map(_.twelonelontId).toSelont).gelontOrelonlselon(Selont.elonmpty)
    if (params(FrsParams.FrsBaselondCandidatelonGelonnelonrationelonnablelonVisibilityFiltelonringParam))
      Futurelon
        .collelonct(twelonelontInfoStorelon.multiGelont(twelonelontIds)).map { twelonelontInfos =>
          candidatelons.map {
            // If twelonelontInfo doelons not elonxist, welon will filtelonr out this twelonelont candidatelon.
            _.filtelonr(candidatelon => twelonelontInfos.gelontOrelonlselon(candidatelon.twelonelontId, Nonelon).isDelonfinelond)
          }
        }
    elonlselon {
      Futurelon.valuelon(candidatelons)
    }
  }

  /**
   * Hydratelon thelon candidatelons with thelon FRS candidatelon sourcelons and scorelons
   */
  privatelon delonf hydratelonCandidatelons(
    frsAuthorWithScorelons: Option[Map[UselonrId, FrsQuelonryRelonsult]],
    candidatelons: Option[Selonq[TwelonelontWithAuthor]]
  ): Futurelon[Option[Selonq[FrsTwelonelont]]] = {
    Futurelon.valuelon {
      candidatelons.map {
        _.map { twelonelontWithAuthor =>
          val frsQuelonryRelonsult = frsAuthorWithScorelons.flatMap(_.gelont(twelonelontWithAuthor.authorId))
          FrsTwelonelont(
            twelonelontId = twelonelontWithAuthor.twelonelontId,
            authorId = twelonelontWithAuthor.authorId,
            frsPrimarySourcelon = frsQuelonryRelonsult.flatMap(_.primarySourcelon),
            frsAuthorScorelon = frsQuelonryRelonsult.map(_.scorelon),
            frsCandidatelonSourcelonScorelons = frsQuelonryRelonsult.flatMap { relonsult =>
              relonsult.sourcelonWithScorelons.map {
                _.collelonct {
                  // selonelon TokelonnStrToAlgorithmMap @ https://sourcelongraph.twittelonr.biz/git.twittelonr.biz/sourcelon/-/blob/helonrmit/helonrmit-corelon/src/main/scala/com/twittelonr/helonrmit/constants/AlgorithmFelonelondbackTokelonns.scala
                  // selonelon Algorithm @ https://sourcelongraph.twittelonr.biz/git.twittelonr.biz/sourcelon/-/blob/helonrmit/helonrmit-corelon/src/main/scala/com/twittelonr/helonrmit/modelonl/Algorithm.scala
                  caselon (candidatelonSourcelonAlgoStr, scorelon)
                      if AlgorithmFelonelondbackTokelonns.TokelonnStrToAlgorithmMap.contains(
                        candidatelonSourcelonAlgoStr) =>
                    AlgorithmToFelonelondbackTokelonnMap.gelontOrelonlselon(
                      AlgorithmFelonelondbackTokelonns.TokelonnStrToAlgorithmMap
                        .gelontOrelonlselon(candidatelonSourcelonAlgoStr, DelonfaultAlgo),
                      DelonfaultAlgoTokelonn) -> scorelon
                }
              }
            }
          )
        }
      }
    }
  }

}

objelonct FrsTwelonelontCandidatelonGelonnelonrator {
  val DelonfaultAlgo: Algorithm.Valuelon = Algorithm.Othelonr
  // 9999 is thelon tokelonn for Algorithm.Othelonr
  val DelonfaultAlgoTokelonn: Int = AlgorithmToFelonelondbackTokelonnMap.gelontOrelonlselon(DelonfaultAlgo, 9999)
}
